--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/reg.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/reg.html
@@ -207,7 +207,41 @@
 						canClick = false;
 						var email = doc.getElementById('email').value.trim();
 						if (email == "") {
-							plus.nativeUI.alert(TextMessage.emailnull);
+							plus.nativeUI.toast(TextMessage.emailnull);
+							return;
+						}
+						var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
+						if (!reg.test(email)) {
+							plus.nativeUI.toast(TextMessage.email_error1);
+							return;
+						}
+						var username = doc.getElementById('username').value.trim();
+						if (username == "") {
+							plus.nativeUI.toast(TextMessage.username_null);
+							return;
+						}
+						if (username.length > 10) {
+							plus.nativeUI.toast(TextMessage.username_error);
+							return;
+						}
+						var password = doc.getElementById('password').value.trim();
+						if(password == ""){
+							plus.nativeUI.toast(TextMessage.password_notnull);
+							return;
+						}
+						var reg = /^[0-9a-zA-Z]{6,16}$/
+						if (!reg.test(password)) {
+							plus.nativeUI.toast(TextMessage.password_error);
+							return;
+						}
+						var passwordConfirm = doc.getElementById('passwordConfirm').value.trim();
+						if (password != passwordConfirm) {
+							plus.nativeUI.toast(TextMessage.confirmPwd_error);
+							return;
+						}
+						var city = doc.getElementById('city').getAttribute('data-val');
+						if (city == null) {
+							plus.nativeUI.toast(TextMessage.addressnull);
 							return;
 						}
 						var waiting = plus.nativeUI.showWaiting();
@@ -284,7 +318,8 @@
 							plus.nativeUI.toast(TextMessage.password_notnull);
 							return;
 						}
-						if (6 > password.length || password.length > 16) {
+						var reg = /^[0-9a-zA-Z]{6,16}$/
+						if (!reg.test(password)) {
 							plus.nativeUI.toast(TextMessage.password_error);
 							return;
 						}
@@ -311,7 +346,7 @@
 						params[Api.Params.password] = hex_sha1(hex_md5(password));
 						params[Api.Params.addressId] = doc.getElementById('city').getAttribute('data-val');
 						params[Api.Params.vCode] = doc.getElementById('verificationCode').value.trim();
-						//params[Api.Params.rCode] = doc.getElementById('introduction-code').value.trim();
+						params[Api.Params.rCode] = "";
 						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
 						Repository.User.register(params, {
 							ok: function(data) {
@@ -322,35 +357,7 @@
 							},
 							ng: function(data) {
 								waiting.close();
-								if(data.email=="1003"){
-									mui.toast("email"+TextMessage.errorCode_1003, {
-										duration: 'long',
-										type: 'div'
-									})
-								}
-								$.each(data, function(key, value) {
-									console.log(key, value);
-									switch(value) {
-										case "1001":
-											if(key == Api.Params.vCode) {
-												mui.toast(TextMessage.verificationCode + TextMessage.errorCode_1001, {
-													duration: 'long',
-													type: 'div'
-												})
-											}
-											break;
-										case "1002":
-											if(key == Api.Params.username) {
-												mui.toast(TextMessage.username + TextMessage.errorCode_1002, {
-													duration: 'long',
-													type: 'div'
-												})
-											}
-											break;
-										default:
-											break;
-									}
-								});
+								Api.callback_ng(data);
 							},
 							error: function() {
 								waiting.close();
