--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/home.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/home.html
@@ -130,7 +130,7 @@
 				<img src="../../images/default.jpg" />
 			</a>
 			<h1 id="title" class="mui-title lang" data-locale="app_name"></h1>
-			<a style="position:relative;width: 30px;height: 100%;" class="mui-icon-extra mui-icon-extra-notice mui-pull-right" id="offCanvasShow">
+			<a style="position:relative;width: 30px;height: 100%;margin-top: 10px;" class="mui-icon-extra mui-icon-extra-notice mui-pull-right" id="offCanvasShow">
 				<i></i>
 			</a>
 			<a class="mui-icon mui-icon-search mui-pull-right" style="margin-right: 0px;"></a>
@@ -199,7 +199,8 @@
 			});
 			window.addEventListener('praiseid', function(event) {
 				var praiseid = event.detail.praiseid;
-				if(praiseid!="undefined"){
+				//alert(typeof(praiseid));
+				if(typeof(praiseid) != "undefined"){
 					var wids=$('.mui-scroll .mui-active').index() + 1;
 					var page = plus.webview.getWebviewById("pullrefresh_sub_" + wids + ".html");
 					mui.fire(page, 'good', {
