--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
@@ -28,7 +28,7 @@
 		        z-index:1;
 		    }
 		     .input-top{
-		        position:fixed;
+		        position:relative;
 		        top:0px;
 		        left:0px;
 		        width:100%;
@@ -37,7 +37,7 @@
 		</style>
 	</head>
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav input-top">
 			<a class="mui-icon-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title lang" data-locale="det_procoment"></h1>
 		</header>
