--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/request.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/request.html
@@ -240,10 +240,12 @@
 					},
 					ng: function(data) {
 						console.log(data);
+						Api.callback_ng(data);
 						if(data=="1000"|| data=="2002"){
 							$(".jiaoyihitext").hide();
+							var mainPage = plus.webview.getLaunchWebview();
+       							mainPage.show();
 						}
-						Api.callback_ng(data);
 						
 					}
 				});
