--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/transaction/select_item.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/transaction/select_item.html
@@ -55,7 +55,7 @@
 				})
 				choice = choice.substr(0, choice.length - 1);
 				if(choice == '') {
-					alert(TextMessage.commdSelect);
+					mui.alert(TextMessage.commdSelect);
 
 					return false;
 				}
