用户页面，商品发布页面，密码更新页面，商品评论页面，bug改修

--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -120,6 +120,10 @@
 							ok: function(data) {
 								setTimeout(function(){
 									waiting.close();
+									mui.toast(TextMessage.pwdudsuccess, {
+										duration: 'long',
+										type: 'div'
+									});
 									$.openWindow({
 										id:'login',
 										url:'login.html',
