--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -108,10 +108,7 @@
 					var pcommentobj = JSON.stringify(datas[i]);
 					var pcommentinfo = $.parseJSON(pcommentobj);
 					var headimg = pcommentinfo.user_photo;
-					var uname = pcommentinfo.nick_name;
-					if(pcommentinfo.nick_name==""){
-						var uname = pcommentinfo.user_name;
-					}
+					var uname = pcommentinfo.user_name;
 					var content = pcommentinfo.msg_detail.replace(/\n/g,"<br />");
 					var time = pcommentinfo.ins_date;
 					var html = new Util.StringBuilder();
@@ -207,9 +204,8 @@
 			} 
 			function addcomment(results){
 				var time2=getNowFormatDate();
-				var contents2=document.commodity_comments.leave_msg_detail.value.replace(/\n/g,"<br />");
+				var contents2=results.data[0].msg_detail.replace(/\n/g,"<br />");
 				var headimg2=results.data[0].photo;
-				console.log(headimg2);
 				var uname2=results.data[0].nick_name;
 				var html2 = new Util.StringBuilder();
 					html2.append('<div class="comtent mui-pull-left"><div class="mui-pull-left">')
