静态页面语言切换再改修

--- a/kankan/pages/setting/setting.html
+++ b/kankan/pages/setting/setting.html
@@ -269,7 +269,7 @@
 				$("#moneyCalculat_jptext").hide();
 				$("#Summary_jptext").hide();
 				$("#Summary_zhtext").show();
-			}else if(language=="ja-JP" || language=="Ja-JP"){
+			}else{
 				$("#rule_jptext").show();
 				$("#rule_zhtext").hide();
 				$("#forbiden_jptext").show();
