修改登录画面和发行新密码画面文字换行问题

--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -18,13 +18,19 @@
 			
 			.mui-input-group label {
 				font-size: smaller;
-				width: 38%;
+				width: 41%;
 			}
 			
 			.mui-input-row label~input,
 			.mui-input-row label~select,
 			.mui-input-row label~textarea {
-				width: 55%;
+				width: 59%;
+				font-size: 75%;
+			}
+			
+			#password, #ver_code {
+				font-size: 67%;
+				line-height: 1.5;
 			}
 			
 			.mui-checkbox input[type=checkbox],
