--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -32,6 +32,20 @@
 				text-align: center;
 			}
 			
+			.mui-input-group label {
+				width: 41%;
+			}
+			
+			.mui-input-row {
+				overflow: inherit;
+			}
+			
+			.mui-input-row label~input,
+			.mui-input-row label~select,
+			.mui-input-row label~textarea {
+				width: 59%;
+			}
+			
 			#forget_password,
 			#new_user_login {
 				color: #FF0000;
@@ -42,9 +56,15 @@
 			}
 			
 			#email-login-form label {
-				font-size: smaller;
+				font-size: 80%;
 			}
 			
+			#forget_password {
+				font-size: 80%;
+			}
+			#new_user_login {
+				font-size: 80%;
+			}
 			#email-login-form input {
 				font-size: 67%;
 				line-height: 1.5;
