--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -102,11 +102,19 @@
 				font-size: 67%;
 				line-height: 1.5;
 			}
+			
+			.input-top {
+		        position:relative;
+		        top:0px;
+		        left:0px;
+		        width:100%;
+		        z-index:1;
+		    }
 		</style>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav input-top">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
 			<a class="lang" data-locale="back"></a>
 			<h1 class="mui-title"><span class="lang" data-locale="user-login"></span></h1>
