修改BUG----密码发行成功之后给用户一个提示信息。

--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -126,10 +126,7 @@
 							ok: function(data) {
 								setTimeout(function(){
 									waiting.close();
-									mui.toast(TextMessage.pwdudsuccess, {
-										duration: 'long',
-										type: 'div'
-									});
+									plus.nativeUI.toast(TextMessage.pwdudsuccess);
 									$.openWindow({
 										id:'login',
 										url:'login.html',
