修改BUG----登陆后，退出，再到登陆页面时候，保持了上次输入的用户名密码。

--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -266,6 +266,8 @@
 								Log.d("email login ok");
 								plus.storage.setItem('LoginFlag', 'isLogin');
 								loginFlg = true;
+								doc.getElementById('email').value = "";
+								doc.getElementById('password').value = "";
 								setTimeout(function() {
 									waiting.close();
 									//mui.back();
