--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -139,14 +139,35 @@
 								}, 500);
 							},
 							ng: function(data) {
-//								if(data == "2014") {
-//									mui.toast(TextMessage.confirmcodeng, {
-//										duration: 'long',
-//										type: 'div'
-//									});
-//								}
+								switch (data){
+									case "2014":
+										mui.toast(TextMessage.confirmcodeng, {
+											duration: 'long',
+											type: 'div'
+										});
+										break;
+									case "2010":
+										mui.toast(TextMessage.not_exist_email, {
+											duration: 'long',
+											type: 'div'
+										});
+										break;
+									case "1001":
+										plus.nativeUI.alert(TextMessage.re_issue, function(event) {
+											mui.back();
+										}, TextMessage.sharetitle, TextMessage.yes);
+										break;
+									case "5001":
+										mui.toast(TextMessage.emailsenderror, {
+											duration: 'long',
+											type: 'div'
+										});
+										break;
+									default:
+										break;
+								}
 								waiting.close();
-								Api.callback_ng(data);
+								//Api.callback_ng(data);
 							},
 							error: function(){
 								waiting.close();
